--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,11 @@ phases:
       - mvn package
 
 artifacts:
+    discard-paths: yes
     name: api.jar
     files:
       - target/api-1.0.0.jar
+
+cache:
+  paths:
+    - '/root/.m2/**/*'
