--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu
+    destination: /home/ubuntu/
 
 hooks:
   BeforeInstall:
@@ -11,10 +11,10 @@ hooks:
 
   ApplicationStart:
     - location: start-server.sh
-      timeout: 300
+      timeout: 30
       runas: root
 
-  ApplicationStop:
-    - location: stop-server.sh
-      timeout: 300
-      runas: root
+#  ApplicationStop:
+#    - location: stop-server.sh
+#      timeout: 30
+#      runas: root
