--- a/appspec.yml
+++ b/appspec.yml
@@ -3,14 +3,14 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu
+    destination: /home/ec2-user
 hooks:
   BeforeInstall:
   AfterInstall:
 
   ApplicationStart:
     - location: start-server.sh
-      timeout: 30
+      timeout: 300
       runas: root
 
   ApplicationStop:
