--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,9 @@ hooks:
       timeout: 300
       runas: root
 
-#  ApplicationStop:
-#    - location: stop-server.sh
-#      timeout: 30
-#      runas: root
-
+  ApplicationStop:
+    - location: stop-server.sh
+      timeout: 30
+      runas: root
 
 
