--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     commands:
       - echo 'pre build is staring'
       - mvn clean
-      - aws ecr get-login --no-include-email --region us-east-1 | docker login --username AWS --password-stdin 000967136778.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 000967136778.dkr.ecr.us-east-1.amazonaws.com
   install:
     commands:
       - echo 'install phase is staring'
